--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -33,3 +33,36 @@
 	padding: 10px 15px;
 	border-radius: 10px;
 }
+
+.sect {
+	display: flex;
+}
+
+.word {
+	width: 630px;
+	margin-top: 100px;
+}
+
+.title {
+	font-size: 54px;
+	font-weight: 700;
+	margin-bottom: 26px;
+}
+
+.paragraf {
+	color: #696969;
+	width: 600px;
+	margin-bottom: 26px;
+}
+
+.contactUs {
+	background-color: #4D77FF;
+	color: white;
+	padding: 16px 36px;
+	border: none;
+	border-radius: 10px;
+}
+
+.doc {
+	margin-left: 137px;
+}
